# elevator-tracker

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
templates/: _oob_update.html  _recent.html  _stats.html  base.html  index.html
